# flame

./: .gitignore  pyproject.toml
src/flame/: __init__.py  galactic.py  galactocentric.py  geometric.py  icrs.py  units.py
tests/: test_gal_to_galcen.py  test_galactic.py  test_geometric.py  test_icrs.py
