[project]
name = "flame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pavadol Yamsiri", email = "pavyamsiri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "optype[numpy]>=0.14.0",
    "polars>=1.35.1",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

pythonVersion = "3.13"
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportDeprecated = true
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnknownParameterType = true

reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportArgumentType = false

[tool.ruff]
line-length = 130

[dependency-groups]
dev = [
    "hypothesis[numpy]>=6.145.1",
    "pytest>=8.4.2",
]
